# CsoundPatcher

./: CMakeLists.txt  csengine.cpp  csengine.h  main.cpp  out.cpp  out.h  signal.cpp  signal.h  sinosc.cpp  sinosc.h
